<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorDarkBlue">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding20">

            <ImageView
                android:id="@+id/app_logo"
                android:layout_width="@dimen/logo_width100"
                android:layout_height="@dimen/logo_height100"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/marginTop20"
                android:background="@drawable/app_logo"
                android:contentDescription="@string/strLogo" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/app_logo"
                android:layout_marginTop="@dimen/marginTop20"
                android:fontFamily="@font/ralewaybold"
                android:text="@string/get_started"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/size35" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:text="@string/signup_to_continue"
                android:textColor="@color/colorLightGrey"
                android:textSize="@dimen/size16sp" />

            <TextView
                android:id="@+id/errorMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView1"
                android:layout_marginTop="@dimen/marginTop5"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorLightGrey"
                android:textSize="@dimen/size16sp" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView1"
                android:layout_marginTop="@dimen/marginTop40"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/hint_username"
                android:inputType="textPersonName"
                android:padding="@dimen/padding_all_10"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorGrey"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/etFirstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etUsername"
                android:layout_marginTop="@dimen/marginTop20"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/hint_first_name"
                android:inputType="text"
                android:padding="@dimen/padding_all_10"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorGrey"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/etLastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etFirstname"
                android:layout_marginTop="@dimen/marginTop20"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/hint_last_name"
                android:inputType="textPersonName"
                android:padding="@dimen/padding_all_10"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorGrey"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etLastname"
                android:layout_marginTop="@dimen/marginTop20"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/padding_all_10"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorGrey"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/tvBirthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etEmail"
                android:layout_marginTop="@dimen/marginTop20"
                android:layout_marginEnd="@dimen/marginRight5"
                android:layout_toStartOf="@id/btnSelectDate"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/hint_birthdate"
                android:padding="@dimen/padding_all_10"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorGrey"
                android:textSize="@dimen/size18sp"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/btnSelectDate"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/select_btn44"
                android:layout_below="@+id/etEmail"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/marginTop20"
                android:background="@color/colorDarkGrey"
                android:padding="@dimen/padding_all_10"
                android:text="@string/select_date_btn"
                android:textColor="@color/colorWhite"
                android:onClick="showDatePickerDialog"/>

            <EditText
                android:id="@+id/etOccupation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvBirthdate"
                android:layout_marginTop="@dimen/marginTop20"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/hint_occupation"
                android:inputType="text"
                android:padding="@dimen/padding_all_10"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorGrey"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etOccupation"
                android:layout_marginTop="@dimen/marginTop20"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/hint_description"
                android:inputType="textMultiLine"
                android:padding="@dimen/padding_all_10"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorGrey"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/signup_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etDescription"
                android:layout_marginTop="@dimen/marginTop20"
                android:background="@drawable/button_radius"
                android:padding="@dimen/padding_all_10"
                android:text="@string/sign_up_btn"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/size18sp"
                android:onClick="goToSecondActivity"/>

            <TextView
                android:id="@+id/signup_with"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signup_btn"
                android:layout_marginTop="@dimen/marginTop10"
                android:layout_centerHorizontal="true"
                android:padding="@dimen/padding_all_10"
                android:text="@string/sign_up_with"
                android:textColor="@color/colorGrey"
                android:textSize="@dimen/size14sp" />

            <ImageView
                android:id="@+id/linkedin_icon"
                android:layout_width="@dimen/icon_w40"
                android:layout_height="@dimen/icon_h40"
                android:layout_below="@id/signup_with"
                android:layout_centerHorizontal="true"
                android:background="@drawable/fb_icon"
                android:contentDescription="@string/strLogo" />

            <TextView
                android:id="@+id/have_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linkedin_icon"

                android:gravity="center"
                android:padding="@dimen/padding_all_10"
                android:text="@string/have_account_login"
                android:textColor="@color/colorRed"
                android:textSize="@dimen/size14sp" />

            <TextView
                android:id="@+id/jak_ashuraliev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/have_account"
                android:gravity="center"
                android:text="@string/jak_ashuraliev"
                android:textColor="@color/colorGrey"
                android:textSize="@dimen/size12sp" />

    </RelativeLayout>
</ScrollView>