<resources>

    <!--  MAIN ACTIVITY-->
    <string name="app_name">Login</string>
    <string name="jak_ashuraliev">By: Jak Ashuraliev | June 1, 2020</string>
    <string name="date">Date: April 26, 2020</string>
    <string name="get_started">Let\'s Find Your Date!</string>
    <string name="signup_to_continue">Please signup to continue</string>
    <string name="ralewaymedium">\@fonts/ralewaymedium</string>
    <string name="have_account_login">Already have account? <a href="#">Login</a>
    </string>
    <string name="hint_username">Username</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_birthdate">Date of Birth</string>
    <string name="hint_email">Email</string>
    <string name="hint_occupation">Occupation</string>
    <string name="hint_description">Description</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="sign_up_with">Sign up with</string>

    <!-- PROFILE ACTIVITY -->
    <string name="welcome"></string>
    <string name="Info">userInfo</string>
    <string name="welcomeMsg">Thank you for signing up! \nBelow you will find your account information:</string>
    <string name="sign_out_btn">Sign Out</string>
    <string name="select_date_btn">Select Date</string>
    <string name="strLogo">Logo</string>
    <string name="USERNAME">USERNAME: \t\t</string>
    <string name="FIRST_NAME">FIRST NAME: \t</string>
    <string name="LAST_NAME">LAST NAME: \t</string>
    <string name="BIRTH_DATE">BIRTH DATE: \t</string>
    <string name="YEARS_OLD">years old</string>
    <string name="EMAIL">EMAIL: \t\t\t\t\t\t\t</string>
    <string name="OCCUPATION"><b>Occupation:</b>\t</string>
    <string name="DESCRIPTION"><b>Description:</b>\t</string>
    <string name="exclamation">!</string>
    <string name="profile_photo">profile_photo</string>
    <string name="userDisplayName">userDisplayName</string>
    <string name="ageContainer">AgeContainer</string>
    <string name="occupationContainer">OccupationContainer</string>
    <string name="descriptionContainer">DescriptionContainer</string>

    <!-- UNIT TEST-->
    <string name="testUsername">Username</string>
    <string name="testFirstname">First Name</string>
    <string name="testLastname">Last Name</string>
    <string name="testEmail">Email</string>
    <string name="testDOB">Date of Birth</string>
    <string name="testAge">30 years old</string>
    <string name="testOccupation">Occupation</string>
    <string name="testDescription">Description</string>

    <string name="allFieldsRequired">All fields are required</string>
    <string name="enterValidEmail">Enter valid email address</string>
    <string name="selectDOB">Select birth date</string>
    <string name="tooYoung">You are too young to register</string>
    <string name="enterOccupation">Enter your occupation</string>
    <string name="enterDescription">Enter your description</string>

    <!-- ERROR MSG -->
    <string name="ERROR_MSG_USERNAME">jakashuraliev</string>
    <string name="ERROR_MSG_FIRSTNAME">Please enter your first name</string>
    <string name="ERROR_MSG_LASTNAME">Please enter your last name</string>
    <string name="ERROR_MSG_EMAIL">Enter valid email address</string>
    <string name="ERROR_MSG_DOB">You are too young, must be at 18 to register</string>
    <string name="ERROR_MSG_OCCUPATION">Please enter your occupation</string>
    <string name="ERROR_MSG_DESCRIPTION">Please enter your description</string>
    <string name="EMPTY_MSG"></string>
    <string name="matches">MATCHES</string>
    <string name="settings">SETTINGS</string>
    <string name="toolbarTitle">Toolbar</string>

    <!-- FRAGMENTS -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragTitlePROFILE">PROFILE</string>
    <string name="fragTitleMATCHES">MATCHES</string>
    <string name="fragTitleSETTINGS">SETTINGS</string>

    <string name="likeColorGrey">grey</string>
    <string name="likeColorPinkLight">#FFCEAEBE</string>
    <string name="likeColorPink">#C70067</string>
    <string name="name_holder">Name</string>
    <string name="occup_holder">Occupation</string>
    <string name="desc_holder">Description</string>
    <string name="UNLIKED">"You Unliked "</string>
    <string name="LIKED">"You Liked "</string>
    <string name="match_image">Match Image</string>
    <string name="unliked_heart_btn">Unliked heart button</string>
    <string name="share_btn">share button</string>
    <string name="gender_msg_error">Please select gender</string>
    <string name="age_msg_error">Age must be between 18-99</string>
    <string name="distance_msg_error">Distance must be between 0-99</string>
    <string name="settings_saved_msg">Settings Saved</string>
    <string name="distance_search_title">Distance Search In Miles</string>
    <string name="hint_enter_distance">Enter distance between 0 - 99</string>
    <string name="age_range_title">Age Range</string>
    <string name="reminder_title">Reminder</string>
    <string name="privacy_title">Privacy</string>
    <string name="gender_title">Gender</string>
    <string name="save_button_text">Save</string>


</resources>
